fazendo correções no merge